added config file

--- a/.dvc/config
+++ b/.dvc/config
@@ -1,5 +1,5 @@
 [core]
     remote = gdrive_remote
-    autostage = true
 ['remote "gdrive_remote"']
-    url = gdrive://13CyP0NFEnH3-fIAckNi3Vj3JQI8Yz3bR
+    url = gdrive://1HIoyD37Vx2k3ORVZti6rP8mUkwuoCwOt
+    gdrive_acknowledge_abuse = true
