--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,7 +38,7 @@ jobs:
       # DVC
       - name: Create project4-442608-5ffc36a5828f.json
         env:
-          GDRIVE_CREDENTIALS_DATA: ${{ secrets.GDRIVE_CREDENTIALS_DATA }}
+          GDRIVE_CREDENTIALS_DATA: ${{ secrets.CREDENTIAL }}
         run: |
           echo $GDRIVE_CREDENTIALS_DATA > project4-442608-5ffc36a5828f.json
 
