--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name : CI workflow
+name: CI workflow
 
 on:
   push:
@@ -49,3 +49,7 @@ jobs:
       - name: DVC Pull Data
         run: |
           uv run dvc pull -v
+
+      - name: Run model inference tests
+        run: |
+          uv run python main.py --mode test --data_path data/test --model_path models/cnn_resnet18_freeze_backbone_False.pth
