--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,3 +49,9 @@ jobs:
       - name: DVC Pull Data
         run: |
           uv run dvc pull -v
+
+      - name: Run model tests
+        run: |
+          uv run python main.py --mode test \
+            --data_path data/test \
+            --model_path models/cnn_resnet18_freeze_backbone_False.pth
