correction in the test.yaml file

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,5 +53,5 @@ jobs:
       - name: Run model tests
         run: |
           uv run python main.py --mode test \
-            --data_path data/test \
+            --data_path data/data/test \
             --model_path models/cnn_resnet18_freeze_backbone_False.pth
