--- a/.dvc/config
+++ b/.dvc/config
@@ -5,3 +5,4 @@
     url = gdrive://1gMJ97yfq7SexkrRVWKbXfsT3KO5Zb82M
     gdrive_use_service_account = true
     gdrive_acknowledge_abuse = true
+    gdrive_service_account_json_file_path = ../project4-442608-5ffc36a5828f.json
