--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,7 +40,7 @@ jobs:
         env:
           GDRIVE_CREDENTIALS_DATA: ${{ secrets.CREDENTIAL }}
         run: |
-          echo $GDRIVE_CREDENTIALS_DATA > project4-442608-5ffc36a5828f.json
+          echo "$GDRIVE_CREDENTIALS_DATA" > project4-442608-5ffc36a5828f.json
 
       - name: Modify DVC Remote
         run: |
