--- a/.dvc/config
+++ b/.dvc/config
@@ -1,6 +1,6 @@
 [core]
     remote = gdrive_remote
 ['remote "gdrive_remote"']
-    url = gdrive://1r3UU3LjsqjEpAubsCHfeMajgKoaOGbec
+    url = gdrive://0ADxho6bRxfiJUk9PVA
     gdrive_use_service_account = true
     gdrive_acknowledge_abuse = true
